fix(feedback page): Align footer div directly under proposed container

--- a/frontend/scss/pages/_feedback.scss
+++ b/frontend/scss/pages/_feedback.scss
@@ -1,6 +1,7 @@
 #feedback
 {
 background-color: #f5f5f5;
+margin-bottom: 80px;
 #email
 {
 	color: black;
